php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #46782 fastcgi.c parse error
Submitted: 2008-12-06 12:46 UTC Modified: 2008-12-07 10:58 UTC
From: whatloveis at hanmail dot net Assigned:
Status: Closed Package: Compile Failure
PHP Version: 5.2.7 OS: Linux
Private report: No CVE-ID: None
 [2008-12-06 12:46 UTC] whatloveis at hanmail dot net
Description:
------------
When I compile with FastCGI support, it gives a parse error.
I think lines 226-236 in `sapi/cgi/fastcgi.c' should be placed in a 
block.







Reproduce code:
---------------
'./configure' \
--disable-spl \
--disable-pdo \
--disable-xmlreader \
--disable-xmlwriter \
--disable-hash \
--without-sqlite \
--with-mysql=/usr/local/mysql \
--enable-mbstring \
--with-zlib \
--with-gd \
--with-freetype-dir \
--enable-fastcgi
make

Actual result:
--------------
sapi/cgi/fastcgi.c: In function `fcgi_init':
sapi/cgi/fastcgi.c:226: parse error before `sa'
sapi/cgi/fastcgi.c:231: `sa' undeclared (first use in this function)
sapi/cgi/fastcgi.c:231: (Each undeclared identifier is reported only 
once
sapi/cgi/fastcgi.c:231: for each function it appears in.)
sapi/cgi/fastcgi.c:231: `len' undeclared (first use in this function)







Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-12-06 15:06 UTC] mattwil@php.net
Caused by changes for Bug #45522
 [2008-12-07 10:58 UTC] mattwil@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 09 22:00:02 2026 UTC