MFH: Fixed bug #46782 (fastcgi.c parse error)